2014-09-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Merge WebKitAuthenticationWidget into WebKitAuthenticationDialog
        https://bugs.webkit.org/show_bug.cgi?id=136700

        Reviewed by Sergio Villar Senin.

        Remove WebKitAuthenticationWidget. The only reason why we had this
        widget separated in WebCore was to share it between WebKit1 and
        WebKit2, but now it's only used by WebKitAuthenticationDialog in WebKit2.

        * PlatformGTK.cmake: Remove files from compilation.
        * platform/gtk/WebKitAuthenticationWidget.cpp: Removed.
        * platform/gtk/WebKitAuthenticationWidget.h: Removed.

2014-09-10  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Use ASSERT instead of ASSERT_WITH_SECURITY_IMPLICATION
        https://bugs.webkit.org/show_bug.cgi?id=136732

        Reviewed by Andy Estes.

        Since r173458 changed to use static_cast<> with toFoo, ASSERT_WITH_SECURITY_IMPLICATION doesn't
        need to be used anymore. ASSERT is enough for it.

        * workers/DefaultSharedWorkerRepository.cpp:
        (WebCore::SharedWorkerProxy::addToWorkerDocuments):
        * workers/WorkerMessagingProxy.cpp:
        (WebCore::WorkerMessagingProxy::startWorkerGlobalScope):
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::document):

2014-09-10  Adenilson Cavalcanti  <cavalcantii@gmail.com>

        [SVG] Cleanup iterator code in SMILTimeContainer using range-based loop
        https://bugs.webkit.org/show_bug.cgi?id=136720

        Reviewed by Filip Pizlo.

        No new tests, no change on behavior.

        * svg/animation/SMILTimeContainer.cpp:
        (WebCore::SMILTimeContainer::setElapsed):
        (WebCore::SMILTimeContainer::updateAnimations):

2014-09-10  Timothy Horton  <timothy_horton@apple.com>

        Fix the build.

        * platform/network/ResourceHandle.h:
        * platform/network/mac/ResourceHandleMac.mm:
